--- a/index.html
+++ b/index.html
@@ -3,157 +3,143 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="J.C Epiphany Limited offers eco-friendly products including concrete home decor, natural soaps, organic fertilizers, and custom supplies."/>
-  <meta name="keywords" content="eco-friendly, concrete decor, natural soaps, organic fertilizers, custom supplies"/>
-  <title>J.C Epiphany Limited | Eco-Friendly Products</title>
+  <meta name="description" content="J.C Epiphany Limited: Premium concrete home decor, handcrafted natural soaps, and organic fertilizers. Discover our eco-friendly collection."/>
+  <meta name="keywords" content="eco-friendly, concrete decor, natural soaps, organic fertilizers, custom supplies, smart apps, handmade"/>
+  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  
+  <title>J.C Epiphany Limited | Eco-Friendly & Handmade Products</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
+  <header class="main-header">
     <div class="logo-container">
-      <img src="jc-logo.png" alt="J.C Epiphany Logo - Concrete Home Decor, Soaps, Organic Fertilizers">
+      <img src="jc-logo.jpg" alt="J.C Epiphany Logo">
     </div>
-    <h2>CONCRETE HOME DECOR | CASTILE SOAPS & SUPPLIES | ORGANIC FERTILIZERS</h2>
-    <h1>J.C Epiphany Limited</h1>
   </header>
 
-  <!-- Stores Section -->
-  <section id="stores">
-    <h2>Our Online Stores</h2>
-    <div class="store-grid">
-      <div class="store-item">
-        <h3>Shopify - Home Decor</h3>
-        <p>Explore our unique collection of handmade concrete home décor — from coasters to planters, doorstops to office essentials.</p>
-        <a href="#" class="button">SHOP J.C HOME DECOR</a>
+  <main>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1>J.C Epiphany Limited</h1>
+        <p class="subtitle">Handcrafted Concrete Decor | Natural Soaps | Organic Fertilizers</p>
+        <a href="#stores" class="button button-primary">Explore Our Collections</a>
       </div>
-      <div class="store-item">
-        <h3>Shopify - Soap Shop</h3>
-        <p>Natural castile soaps, charcoal bars, pet shampoo, and DIY soap supplies — all chemical-free and handcrafted.</p>
-        <a href="#" class="button">SHOP JC SOAPS & SUPPLIES</a>
-      </div>
-      <div class="store-item">
-        <h3>Ebay - Soap & Supplies</h3>
-        <p>Browse through our Ebay store and view soaps, supplies, local treats and more!</p>
-        <a href="#" class="button">SHOP EBAY SOAP & SUPPLIES</a>
-      </div>
-      <div class="store-item">
-        <h3>Organic Fertilizers (Local)</h3>
-        <p>For Jamaican customers only — order fish emulsion and seaweed fertilizer delivered safely to your door.</p>
-        <a href="#" class="button">SHOP FERTILIZERS</a>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Resources Section -->
-  <section id="resources">
-    <h2>Resources</h2>
-    <div class="resource-grid">
-      <div class="resource-item">
-        <h3>Soaps & Supplies</h3>
-        <img src="soaps-supplies.jpg" alt="Natural soaps and DIY supplies guide" loading="lazy">
-        <p>Castile soap guides, paste dilution calculator, pet shampoo directions</p>
+    <!-- Stores Section -->
+    <section id="stores" class="stores-section">
+      <h2 class="section-title">Our Online Stores & Marketplaces</h2>
+      <div class="store-grid">
+        <div class="store-item">
+          <div class="store-content">
+            <h3>Our Shopify Store</h3>
+            <p>View our entire product collection. From concrete home décor to natural soaps and supplies, find everything in one place.</p>
+            <a href="#" class="button">Shop The Full Collection</a>
+          </div>
+        </div>
+        <div class="store-item">
+          <div class="store-content">
+            <h3>PIPPS Smart Apps</h3>
+            <p>Discover our innovative smart apps designed to simplify your daily tasks and enhance productivity.</p>
+            <a href="#" class="button">Explore Our Apps</a>
+          </div>
+        </div>
+        <div class="store-item">
+          <div class="store-content">
+            <h3>Ebay Store</h3>
+            <p>Browse our Ebay store for soaps, unique supplies, local Jamaican treats, and more great finds.</p>
+            <a href="#" class="button">Visit Us on Ebay</a>
+          </div>
+        </div>
+        <div class="store-item">
+          <div class="store-content">
+            <h3>Organic Fertilizers</h3>
+            <p>Local Jamaican delivery for our fish emulsion & kelp seaweed extract. Give your plants the boost they deserve.</p>
+            <a href="#" class="button">Shop Fertilizers</a>
+          </div>
+        </div>
       </div>
-      <div class="resource-item">
-        <h3>J.C Blooms Organic Plant Care</h3>
-        <img src="fertilizers.jpg" alt="Fertilizer application methods and pest control" loading="lazy">
-        <p>Fertilizer calculator, effective application methods, pest control tips</p>
-      </div>
-      <div class="resource-item">
-        <h3>J.C Custom Calculators</h3>
-        <img src="calculators.jpg" alt="DIY calculators for soap and fertilizer mixing" loading="lazy">
-        <p>Custom tools: paste dilution, fertilizer usage, natural plant spray formulas</p>
-      </div>
-      <div class="resource-item">
-        <h3>J.C Color Pigment Uses</h3>
-        <img src="color-pigments.jpg" alt="Concrete pigment blending guidelines" loading="lazy">
-        <p>Color pigment blending instructions for cement and ceramics</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- About Us -->
-  <section id="about-us">
-    <h2>About J.C Epiphany Limited</h2>
-    <div class="about-grid">
-      <div class="about-column">
-        <h3>About Us</h3>
-        <p>Founded in 2013, J.C Epiphany has grown into a trusted brand offering eco-conscious products that blend function and beauty. Our online presence spans Shopify, eBay, and local markets in Jamaica. Visit us at <a href="https://www.jcepiphany.com " target="_blank">www.jcepiphany.com</a></p>
+    <!-- Resources Section -->
+    <section id="resources" class="resources-section">
+      <h2 class="section-title">Helpful Resources</h2>
+      <div class="resource-grid">
+        <div class="resource-item">
+          <img src="soaps-supplies.jpg" alt="A collection of natural soaps and supplies" loading="lazy">
+          <h3>Soaps & Supplies</h3>
+          <p>Guides for Castile Soap, Paste Dilution, and Pet Shampoo.</p>
+        </div>
+        <div class="resource-item">
+          <img src="fertilizers.jpg" alt="Bottles of organic plant fertilizer" loading="lazy">
+          <h3>Organic Plant Care</h3>
+          <p>Fertilizer calculators and effective application methods.</p>
+        </div>
+        <div class="resource-item">
+          <img src="calculators.jpg" alt="A custom calculator interface" loading="lazy">
+          <h3>Custom Calculators</h3>
+          <p>Tools for paste dilution, fertilizer usage, and more.</p>
+        </div>
+        <div class="resource-item">
+          <img src="color-pigments.jpg" alt="Various color pigments for cement" loading="lazy">
+          <h3>Color Pigment Uses</h3>
+          <p>Blending guides for adding color to cement and ceramics.</p>
+        </div>
       </div>
-      <div class="about-column">
-        <h3>Our Products</h3>
-        <ul>
-          <li><strong>Home Décor:</strong> Bookends, coasters, planters, trays, bowls, jewelry, and more</li>
-          <li><strong>Soaps:</strong> Castile liquid & bar soaps, charcoal soaps, pet shampoo</li>
-          <li><strong>Supplies:</strong> Cement pigments, preservatives, packaging, bottles, and additives</li>
-          <li><strong>Fertilizers:</strong> Fish emulsion, seaweed extract for indoor & outdoor plants</li>
-        </ul>
-      </div>
-      <div class="about-column">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="#">Shopify - Home Decor</a></li>
-          <li><a href="#">Shopify - Soap & Supplies</a></li>
-          <li><a href="#">Ebay - Soap Shop</a></li>
-          <li><a href="#">Resources</a></li>
-        </ul>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Form -->
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form id="contact-form" action="https://formspree.io/f/xgvzwykv " method="POST">
-      <input type="text" name="name" placeholder="Name" required>
-      <input type="email" name="_replyto" placeholder="Email*" required>
-      <textarea name="message" placeholder="Message*" required></textarea>
-
-      <!-- Optional: Honeypot field -->
-      <div style="display: none;">
-        <label>Don’t fill this out if you're human:</label>
-        <input name="_gotcha" />
+    <!-- About Us Section -->
+    <section id="about-us" class="about-section">
+      <div class="about-content">
+        <div class="about-column">
+          <h2 class="section-title">About J.C Epiphany Limited</h2>
+          <p>Since 2013, J.C Epiphany has been dedicated to creating unique, eco-friendly products that blend function and beauty. From our Shopify and Ebay stores to our local Jamaican market, we are committed to exceptional quality and customer service. We invite you to explore our handcrafted collections.</p>
+          <a href="https://www.jcepiphany.com" target="_blank" class="text-link">Visit our main site: www.jcepiphany.com</a>
+        </div>
+        <div class="about-column">
+          <h3 class="list-title">Our Products</h3>
+          <ul>
+            <li><b>Home & Art Decor:</b> Concrete bookends, coasters, planters, trays, and more.</li>
+            <li><b>Natural Soaps:</b> Castile liquid & bar soaps, charcoal soap, pet shampoo.</li>
+            <li><b>DIY Supplies:</b> Molds, color pigments, bottles, and natural preservatives.</li>
+            <li><b>Organic Fertilizers:</b> Fish and kelp/seaweed extract.</li>
+          </ul>
+        </div>
       </div>
+    </section>
 
-      <button type="submit">SEND</button>
-    </form>
-    <p class="form-message"></p>
-  </section>
+    <!-- Contact Form Section -->
+    <section id="contact" class="contact-section">
+      <h2 class="section-title">Contact Us</h2>
+      <p>Have a question or a custom request? Drop us a line!</p>
+      <form id="contact-form" action="https://formspree.io/f/xgvzwykv" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="_replyto" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+        <button type="submit" class="button button-primary">Send Message</button>
+      </form>
+      <p class="form-message"></p>
+    </section>
+  </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 J.C Epiphany Limited. <a href="privacy-policy.html">Privacy Policy</a></p>
-    <p>This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</p>
+  <footer class="main-footer">
     <a href="#" class="whatsapp-button" aria-label="Message us on WhatsApp">
-      <img src="whatsapp-icon.png" alt="WhatsApp Icon"> Message us on WhatsApp
+      <img src="whatsapp-icon.png" alt="WhatsApp Icon">
+      <span>Message us on WhatsApp</span>
     </a>
+    <div class="footer-bottom">
+      <p>© 2025 J.C Epiphany Limited. All Rights Reserved. | <a href="privacy-policy.html">Privacy Policy</a></p>
+      <p class="recaptcha-notice">This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</p>
+    </div>
   </footer>
 
-  <!-- Cookie Consent Banner -->
-  <div id="cookie-banner">
-    🍪 We use cookies to protect against spam and improve your experience.
-    <a href="privacy-policy.html">Learn more</a>
-    <button onclick="acceptCookies()">Accept</button>
-  </div>
-
-  <!-- Scripts -->
   <script src="scripts.js"></script>
-
-  <!-- Cookie Consent Script -->
-  <script>
-    function acceptCookies() {
-      document.getElementById('cookie-banner').style.display = 'none';
-      localStorage.setItem('cookiesAccepted', 'true');
-    }
-
-    // Show banner only if not accepted yet
-    window.onload = function () {
-      if (!localStorage.getItem('cookiesAccepted')) {
-        document.body.appendChild(document.getElementById('cookie-banner'));
-      }
-    };
-  </script>
-
 </body>
 </html>
