--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </section>
 
-    <!-- Stores Section -->
+    <!-- Stores Section - NOW WITH WORKING LINKS -->
     <section id="stores" class="stores-section">
       <h2 class="section-title">Our Online Stores & Marketplaces</h2>
       <div class="store-grid">
@@ -40,57 +40,57 @@
           <div class="store-content">
             <h3>Our Shopify Store</h3>
             <p>View our entire product collection. From concrete home décor to natural soaps and supplies, find everything in one place.</p>
-            <a href="#" class="button">Shop The Full Collection</a>
+            <a href="https://jcepiphany.myshopify.com/" target="_blank" rel="noopener noreferrer" class="button">Shop The Full Collection</a>
           </div>
         </div>
         <div class="store-item">
           <div class="store-content">
             <h3>PIPPS Smart Apps</h3>
             <p>Discover our innovative smart apps designed to simplify your daily tasks and enhance productivity.</p>
-            <a href="#" class="button">Explore Our Apps</a>
+            <a href="https://pipps.app/" target="_blank" rel="noopener noreferrer" class="button">Explore Our Apps</a>
           </div>
         </div>
         <div class="store-item">
           <div class="store-content">
             <h3>Ebay Store</h3>
             <p>Browse our Ebay store for soaps, unique supplies, local Jamaican treats, and more great finds.</p>
-            <a href="#" class="button">Visit Us on Ebay</a>
+            <a href="https://www.ebay.com/usr/jc-epiphany-online-shop" target="_blank" rel="noopener noreferrer" class="button">Visit Us on Ebay</a>
           </div>
         </div>
         <div class="store-item">
           <div class="store-content">
             <h3>Organic Fertilizers</h3>
             <p>Local Jamaican delivery for our fish emulsion & kelp seaweed extract. Give your plants the boost they deserve.</p>
-            <a href="#" class="button">Shop Fertilizers</a>
+            <a href="https://jcepiphany.myshopify.com/collections/rapid-grow-organic-liquid-fertilizers" target="_blank" rel="noopener noreferrer" class="button">Shop Fertilizers</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Resources Section -->
+    <!-- Resources Section - NOW WITH WORKING LINKS -->
     <section id="resources" class="resources-section">
       <h2 class="section-title">Helpful Resources</h2>
       <div class="resource-grid">
-        <div class="resource-item">
+        <a href="https://jcepiphany.wixsite.com/resources/jcsoapsandsupplies" target="_blank" rel="noopener noreferrer" class="resource-item">
           <img src="soaps-supplies.jpg" alt="A collection of natural soaps and supplies" loading="lazy">
           <h3>Soaps & Supplies</h3>
           <p>Guides for Castile Soap, Paste Dilution, and Pet Shampoo.</p>
-        </div>
-        <div class="resource-item">
+        </a>
+        <a href="https://jcepiphany.wixsite.com/resources/jcbloomsorganicplantcare" target="_blank" rel="noopener noreferrer" class="resource-item">
           <img src="fertilizers.jpg" alt="Bottles of organic plant fertilizer" loading="lazy">
           <h3>Organic Plant Care</h3>
           <p>Fertilizer calculators and effective application methods.</p>
-        </div>
-        <div class="resource-item">
+        </a>
+        <a href="https://pipps-app.github.io/tools/" target="_blank" rel="noopener noreferrer" class="resource-item">
           <img src="calculators.jpg" alt="A custom calculator interface" loading="lazy">
           <h3>Custom Calculators</h3>
           <p>Tools for paste dilution, fertilizer usage, and more.</p>
-        </div>
-        <div class="resource-item">
+        </a>
+        <a href="https://jcepiphany.wixsite.com/resources/color-oxide-pigments-guide" target="_blank" rel="noopener noreferrer" class="resource-item">
           <img src="color-pigments.jpg" alt="Various color pigments for cement" loading="lazy">
           <h3>Color Pigment Uses</h3>
           <p>Blending guides for adding color to cement and ceramics.</p>
-        </div>
+        </a>
       </div>
     </section>
 
@@ -128,18 +128,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer - NOW WITH WORKING WHATSAPP LINK -->
   <footer class="main-footer">
-    <a href="#" class="whatsapp-button" aria-label="Message us on WhatsApp">
-      <img src="whatsapp-icon.png" alt="WhatsApp Icon">
-      <span>Message us on WhatsApp</span>
-    </a>
-    <div class="footer-bottom">
-      <p>© 2025 J.C Epiphany Limited. All Rights Reserved. | <a href="privacy-policy.html">Privacy Policy</a></p>
-      <p class="recaptcha-notice">This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</p>
-    </div>
-  </footer>
-
-  <script src="scripts.js"></script>
-</body>
-</html>
+    <a href="https://wa.me/18767747372" target="_blank" rel="noopener noreferrer" class="wh
