Add robots.txt & sitemap; update privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Privacy Policy for J.C Epiphany Limited. Learn how we collect and use your information.">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://jcepiphany.com/privacy-policy.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://jcepiphany.com/privacy-policy.html" />
+  <meta property="og:title" content="Privacy Policy - J.C Epiphany Limited" />
+  <meta property="og:description" content="How J.C Epiphany Limited collects, uses, and protects your data." />
+  <meta property="og:image" content="https://jcepiphany.com/jc-logo.jpg" />
+  <meta name="twitter:card" content="summary" />
   <title>Privacy Policy - J.C Epiphany Limited</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -12,7 +20,7 @@
   <!-- Header -->
   <header>
     <div class="logo-container">
-      <img src="jc-logo.png" alt="J.C Epiphany Logo">
+      <img src="jc-logo.jpg" alt="J.C Epiphany Logo">
     </div>
     <h2>J.C Epiphany Limited</h2>
     <h1>Privacy Policy</h1>
@@ -58,11 +66,13 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 J.C Epiphany Limited. All rights reserved.</p>
-    <a href="#" class="whatsapp-button" aria-label="Message us on WhatsApp">
+  <footer class="main-footer">
+    <a href="https://wa.me/18767747372" class="whatsapp-button" aria-label="Message us on WhatsApp">
       <img src="whatsapp-icon.png" alt="WhatsApp Icon"> Message us on WhatsApp
     </a>
+    <div class="footer-bottom">
+      <p>&copy; 2025 J.C Epiphany Limited. All rights reserved.</p>
+    </div>
   </footer>
 
 </body>
