changed about us section

--- a/index.html
+++ b/index.html
@@ -104,16 +104,28 @@
       <div class="about-content">
         <div class="about-column">
           <h2 class="section-title">About J.C Epiphany Limited</h2>
-          <p>Since 2013, J.C Epiphany has been dedicated to creating unique, eco-friendly products that blend function and beauty. From our Shopify and Ebay stores to our local Jamaican market, we are committed to exceptional quality and customer service. We invite you to explore our handcrafted collections.</p>
+          <p>Founded in 2013, J.C Epiphany Limited blends craftsmanship, sustainability, and innovation across both physical and digital products. Our eco-friendly collections include handcrafted concrete décor, natural soaps, organic fertilizers, and DIY craft supplies—serving customers locally in Jamaica and worldwide through our online stores and marketplaces.</p>
+          <p>Our technology division, PIPPS Smart Apps, originated over 25 years ago and continues to power real-world operations with robust, bug-free solutions. From processing prescriptions, doctors’ visits, and laboratory transactions in a secure network environment, to delivering modern business tools such as our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator, we help businesses run smarter. This success is backed by a team of database administrators and software developers with over 35 years of experience, ensuring every solution is reliable, scalable, and built to last.</p>
           <a href="https://www.jcepiphany.com" target="_blank" class="text-link">Visit our main site: www.jcepiphany.com</a>
         </div>
         <div class="about-column">
           <h3 class="list-title">Our Products</h3>
           <ul>
-            <li><b>Home & Art Decor:</b> Concrete bookends, coasters, planters, trays, and more.</li>
+            <li><b>Home & Art Décor:</b> Concrete bookends, coasters, planters, trays, and more.</li>
             <li><b>Natural Soaps:</b> Castile liquid & bar soaps, charcoal soap, pet shampoo.</li>
             <li><b>DIY Supplies:</b> Molds, color pigments, bottles, and natural preservatives.</li>
-            <li><b>Organic Fertilizers:</b> Fish and kelp/seaweed extract.</li>
+            <li><b>Organic Fertilizers:</b> Fish and kelp/seaweed extract for healthier, more vibrant plants.</li>
+            <li><b>PIPPS Smart Apps:</b>
+              <ul>
+                <li>Legacy healthcare processing system (prescriptions, doctors’ visits, laboratory transactions)</li>
+                <li>Landing Page Creator</li>
+                <li>Custom Chatbots</li>
+                <li>PIPPS Point of Sale (POS)</li>
+                <li>Physician Appointment Scheduler</li>
+                <li>MakerCalc cost calculator</li>
+                <li>Free online tools (Paste Dilution Calculator, Pest Spray Calculator, Rapid Grow Fertilizer Calculator)</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
