update about us

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="J.C Epiphany Limited: Premium concrete home decor, handcrafted natural soaps, and organic fertilizers. Discover our eco-friendly collection."/>
+  <meta name="description" content="J.C Epiphany Limited offers eco-friendly décor, natural soaps, organic fertilizers, and PIPPS Smart Apps software solutions including healthcare systems, POS, appointment scheduling, and custom business tools." />
   <meta name="keywords" content="eco-friendly, concrete decor, natural soaps, organic fertilizers, custom supplies, smart apps, handmade"/>
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://jcepiphany.com/" />
@@ -151,8 +151,8 @@
       <div class="about-content">
         <div class="about-column">
           <h2 class="section-title">About J.C Epiphany Limited</h2>
-          <p>Founded in 2013, J.C Epiphany Limited blends craftsmanship, sustainability, and innovation across both physical and digital products. Our eco-friendly collections include handcrafted concrete décor, natural soaps, organic fertilizers, and DIY craft supplies—serving customers locally in Jamaica and worldwide through our online stores and marketplaces.</p>
-          <p>Our technology division, PIPPS Smart Apps, originated over 25 years ago and continues to power real-world operations with robust, bug-free solutions. From processing prescriptions, doctors’ visits, and laboratory transactions in a secure network environment, to delivering modern business tools such as our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator, we help businesses run smarter. This success is backed by a team of database administrators and software developers with over 35 years of experience, ensuring every solution is reliable, scalable, and built to last.</p>
+          <p>Since 2013, J.C Epiphany Limited has combined craftsmanship, sustainability, and innovation in both physical and digital products. We offer eco-friendly concrete décor, natural soaps, organic fertilizers, and DIY craft supplies—serving customers in Jamaica and worldwide.</p>
+          <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors’ visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last.</p>
           <a href="https://www.jcepiphany.com" target="_blank" class="text-link">Visit our main site: www.jcepiphany.com</a>
         </div>
         <div class="about-column">
