--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="J.C Epiphany Limited offers eco-friendly décor, heavy concrete bookends, handcrafted doorstops, coasters, Castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, and PIPPS Smart Apps software solutions including healthcare systems, POS, appointment scheduling, cost calculators, and custom chatbot tools. Serving Jamaica and worldwide." />
+  <meta           <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors' visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last.</p>
+          <p class="text-link">Shop our full collection at: <a href="https://jcepiphany.myshopify.com" target="_blank" rel="noopener noreferrer nofollow">jcepiphany.myshopify.com</a></p>
+        </div>e="description" content="J.C Epiphany Limited offers eco-friendly décor, heavy concrete bookends, handcrafted doorstops, coasters, Castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, and PIPPS Smart Apps software solutions including healthcare systems, POS, appointment scheduling, cost calculators, and custom chatbot tools. Serving Jamaica and worldwide." />
   <meta name="keywords" content="eco-friendly products, handcrafted concrete decor, heavy bookends, concrete doorstops, coasters, castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, healthcare software, business software, PIPPS Smart Apps, POS system, appointment scheduler, cost calculator, chatbot solutions, Jamaica handmade products, handmade home decor, sustainable products, small business tools" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://jcepiphany.com/" />
