--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta           <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors' visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last.</p>
-          <p class="text-link">Shop our full collection at: <a href="https://jcepiphany.myshopify.com" target="_blank" rel="noopener noreferrer nofollow">jcepiphany.myshopify.com</a></p>
-        </div>e="description" content="J.C Epiphany Limited offers eco-friendly décor, heavy concrete bookends, handcrafted doorstops, coasters, Castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, and PIPPS Smart Apps software solutions including healthcare systems, POS, appointment scheduling, cost calculators, and custom chatbot tools. Serving Jamaica and worldwide." />
+
+  <!-- SEO -->
+  <meta name="description" content="J.C Epiphany Limited offers eco-friendly décor, heavy concrete bookends, handcrafted doorstops, coasters, Castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, and PIPPS Smart Apps software solutions including healthcare systems, POS, appointment scheduling, cost calculators, and custom chatbot tools. Serving Jamaica and worldwide." />
   <meta name="keywords" content="eco-friendly products, handcrafted concrete decor, heavy bookends, concrete doorstops, coasters, castile liquid soap, natural soaps, organic fertilizers, DIY craft supplies, healthcare software, business software, PIPPS Smart Apps, POS system, appointment scheduler, cost calculator, chatbot solutions, Jamaica handmade products, handmade home decor, sustainable products, small business tools" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://jcepiphany.com/" />
@@ -23,11 +23,10 @@
   <meta name="twitter:description" content="Premium concrete home décor, handcrafted natural soaps, and organic fertilizers. Discover our eco-friendly collection." />
   <meta name="twitter:image" content="https://jcepiphany.com/jc-logo.jpg" />
 
-  <!-- Google Fonts -->
+  <!-- Fonts & Styles -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-  
   <title>J.C Epiphany Limited | Eco-Friendly & Handmade Products</title>
   <link rel="icon" href="jc-logo.jpg" type="image/jpeg" />
   <link rel="stylesheet" href="styles.css"/>
@@ -155,7 +154,7 @@
           <h2 class="section-title">About J.C Epiphany Limited</h2>
           <p>Since 2013, J.C Epiphany Limited has combined craftsmanship, sustainability, and innovation in both physical and digital products. We offer eco-friendly concrete décor, natural soaps, organic fertilizers, and DIY craft supplies—serving customers in Jamaica and worldwide.</p>
           <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors’ visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last.</p>
-          <a href="https://www.jcepiphany.com" target="_blank" class="text-link">Visit our main site: www.jcepiphany.com</a>
+          <p class="text-link">Shop our full collection at: <a href="https://jcepiphany.myshopify.com" target="_blank" rel="noopener noreferrer nofollow">jcepiphany.myshopify.com</a></p>
         </div>
         <div class="about-column">
           <h3 class="list-title">Our Products</h3>
