text in about us

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="about-column">
           <h2 class="section-title">About J.C Epiphany Limited</h2>
           <p>Since 2013, J.C Epiphany Limited has combined craftsmanship, sustainability, and innovation in both physical and digital products. We offer eco-friendly concrete décor, natural soaps, organic fertilizers, and DIY craft supplies—serving customers in Jamaica and worldwide.</p>
-          <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors’ visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last.</p>
+          <p>Our technology division, PIPPS Smart Apps, has delivered secure, bug-free software for over 25 years, from healthcare systems that process prescriptions, doctors’ visits, and lab transactions to business tools like our Landing Page Creator, custom Chatbots, PIPPS Point of Sale, Physician Appointment Scheduler, and MakerCalc cost calculator. Backed by 35+ years of database and software expertise, we ensure every solution is reliable, scalable, and built to last, including inventory management and POS systems.</p>
           <p class="text-link">Shop our full collection at: <a href="https://jcepiphany.myshopify.com" target="_blank" rel="noopener noreferrer nofollow">jcepiphany.myshopify.com</a></p>
         </div>
         <div class="about-column">
