up date our products

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <li><b>Organic Fertilizers:</b> Fish and kelp/seaweed extract for healthier, more vibrant plants.</li>
             <li><b>PIPPS Smart Apps:</b>
               <ul>
-                <li>Legacy healthcare processing system (prescriptions, doctors’ visits, laboratory transactions)</li>
+                <li>Legacy healthcare processing system (prescriptions, doctors’ visits, laboratory transactions) and comprehensive inventory management and issuing system</li>
                 <li>Landing Page Creator</li>
                 <li>Custom Chatbots</li>
                 <li>PIPPS Point of Sale (POS)</li>
