update product descriptions and resource links for organic fertilizers and plant care

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="store-item">
           <div class="store-content">
             <h3>Organic Fertilizers</h3>
-            <p>Local Jamaican delivery for our fish emulsion & kelp seaweed extract. Give your plants the boost they deserve.</p>
+            <p>Your trusted source for organic plant nutrition — supporting healthier soil, stronger growth, and bountiful harvests.</p>
             <a href="https://jcepiphany.myshopify.com/collections/rapid-grow-organic-liquid-fertilizers" target="_blank" rel="noopener noreferrer" class="button">Shop Fertilizers</a>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <h3>Soaps & Supplies</h3>
           <p>Guides for Castile Soap, Paste Dilution, and Pet Shampoo.</p>
         </a>
-        <a href="https://jcepiphany.wixsite.com/resources/jcbloomsorganicplantcare" target="_blank" rel="noopener noreferrer" class="resource-item">
+        <a href="https://rapidgrow.jcepiphany.com/" target="_blank" rel="noopener noreferrer" class="resource-item">
           <img src="fertilizers.jpg" alt="Bottles of organic plant fertilizer" loading="lazy">
           <h3>Organic Plant Care</h3>
           <p>Fertilizer calculators and effective application methods.</p>
